hphp/test/zend/good/tests/lang/bug24573.php.expectf

Fatal error: Cannot re-assign $this in %s/bug24573.php on line 6
